static/page.css
.staff-block {
	border: 2px solid blue;
	border-radius: 5px;
	/*background-color:#8888aa;*/
	background-color:#c1cef5;
	width: 200px;
	text-align: center;
	padding-top:10px;
}

.checker {
	border: 2px solid blue;
	border-radius: 5px;
	
	/*background-color:#67a9f0b5;*/
	/*background-color:#c1cef5;*/
}
.staff-container {
  	padding: 0;
	margin: 0;
  	list-style: none;
  	-ms-box-orient: horizontal;
  	display: -webkit-box;
  	display: -moz-box;
  	display: -ms-flexbox;
  	display: -moz-flex;
  	display: -webkit-flex;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.bio-img {
	width:150px;
	height:150px;
	border-radius: 50%;
	display: flex;
	margin:auto;
  	justify-content: center;
  	align-items: center;
}

.hero {
    /*background-image: url("images/showcase.jpg"); */
	color:#000000;
	/*background-color:#67a9f0b5;*/
	background-color:#FFFFFF;
	background-position: center; /* Center the image */
	background-repeat: no-repeat; /* Do not repeat the image */
	background-size: cover; /* Resize the background image to cover the entire container */

}

.slide-div {
	/*background-color:#222222AA;*/
	/*background-color:#67a9f0b5;*/
	/*background-image: url("/assets/images/grey.png")*/
	background-color:#FFFFFF;
}
.slide-div a {
	/*color:#FFFFFF;*/
	color:#000000;
}

.career-div {
	border: 2px solid blue;
	border-radius:5px;
	padding:1px;
}

.page-wrapper {
  margin-right: auto; 
  margin-left:  auto; 
}
.content-wrapper {
  padding:5px;
}

/*header, body, html {
  background-image: url("/assets/images/grey.png");

  height: 100%;
  background-position: center;
  background-repeat: repeat;
  background-size: cover;
}*/

/** Site footer */
.site-footer { border-top: 1px solid #e8e8e8; padding: 30px 0; }

.footer-heading { font-size: 1.125rem; margin-bottom: 15px; }

.feed-subscribe .svg-icon { padding: 5px 5px 2px 0; }

.contact-list, .social-media-list, .pagination { list-style: none; margin-left: 0; }

.footer-col-wrapper, .social-links { font-size: 0.9375rem; color: #828282; }

.footer-col { margin-bottom: 15px; }

.footer-col-1, .footer-col-2 { width: calc(50% - (30px / 2)); }

.footer-col-3 { width: calc(100% - (30px / 2)); }


@media screen and (min-width: 800px) { .footer-col-1 { width: calc(35% - (30px / 2)); }
  .footer-col-2 { width: calc(20% - (30px / 2)); }
  .footer-col-3 { width: calc(45% - (30px / 2)); } }
@media screen and (min-width: 600px) { .footer-col-wrapper { display: flex; }
  .footer-col { width: calc(100% - (30px / 2)); padding: 0 15px; }
  .footer-col:first-child { padding-right: 15px; padding-left: 0; }
  .footer-col:last-child { padding-right: 0; padding-left: 15px; } }
/** Page content */
.page-content { padding: 30px 0; flex: 1 0 auto; }

.page-heading { font-size: 2rem; }

.post-list-heading { font-size: 1.75rem; }

.post-list { margin-left: 0; list-style: none; }
.post-list > li { margin-bottom: 30px; }

.post-meta { font-size: 14px; color: #828282; }

.post-link { display: block; font-size: 1.5rem; }

/** Posts */
.post-header { margin-bottom: 30px; }

.post-title, .post-content h1 { font-size: 2.625rem; letter-spacing: -1px; line-height: 1.15; }
@media screen and (min-width: 800px) { .post-title, .post-content h1 { font-size: 2.625rem; } }

.post-content { margin-bottom: 30px; }
.post-content h1, .post-content h2, .post-content h3 { margin-top: 60px; }
.post-content h4, .post-content h5, .post-content h6 { margin-top: 30px; }
.post-content h2 { font-size: 1.75rem; }
@media screen and (min-width: 800px) { .post-content h2 { font-size: 2rem; } }
.post-content h3 { font-size: 1.375rem; }
@media screen and (min-width: 800px) { .post-content h3 { font-size: 1.625rem; } }
.post-content h4 { font-size: 1.25rem; }
.post-content h5 { font-size: 1.125rem; }
.post-content h6 { font-size: 1.0625rem; }

